--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
         "sass": "^1.20.1",
         "sass-loader": "7.*",
         "vue": "^2.5.17",
+        "vue-router": "^3.1.3",
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
-
-        ,
+        "@fortawesome/fontawesome-free": "^5.10.2",
         "admin-lte": "^3.0.0-rc.1"
     }
 }
